дополнил свагер документацию
